<resources>
    <string name="app_name" translatable="false">WeFit</string>
    <string name="text_label_home">Home</string>
    <string name="text_label_training">Training</string>
    <string name="text_label_add">Add</string>
    <string name="text_label_diet">Diet</string>
    <string name="text_label_run">Run</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="login" translatable="false">Login</string>
    <string name="new_user_label">New user? Sign up</string>
    <string name="forgot_password">I forgot my password</string>
    <string name="otherwise_login_label">Otherwise login with:</string>
    <string name="forgot_mail_sent">Email sent</string>
    <string name="error_sending_mail">There has been an error sending the mail</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="registration">Registration</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="select_gender">Gender</string>
    <string name="birth_date">Birth date:</string>
    <string name="next">Next</string>
    <string name="role_label">I am a: </string>
    <string name="back_button">Back</string>
    <string name="register_button">Register</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="coach_label">Coach</string>
    <string name="client_label">Client</string>
    <string name="new_client">New client</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="choose_objective">Choose your objective:</string>
    <string name="fit_objective">Shape definition</string>
    <string name="gain_mass_objective">Gain mass</string>
    <string name="lose_weight_objective">Lose weight</string>
    <string name="new_coach">New coach</string>
    <string name="choose_competences">Select your competences</string>
    <string name="personal_trainer">Personal trainer</string>
    <string name="dietician">Dietician</string>
    <string name="attach_certification">Attach your certification:*</string>
    <string name="certification_checked">*They will be checked by our staff to confirm your registration</string>
    <string name="error_email"><u>Please insert a valid email address</u></string>
    <string name="error_password">The password must have a lowercase letter, a capital letter, a digit and it must be between 8 and 20 characters</string>
    <string name="name_error">Insert a valid name</string>
    <string name="date_error">Please pick a date</string>
    <string name="error_radio">Choose a value</string>
    <string name="error_password_not_matching">Passwords not matching</string>
    <string name="error_height">Height must be between 100cm and 230 cm</string>
    <string name="error_weight">Weight must be more than 40kg</string>
    <string name="error_general">There are some errors</string>
    <string name="error_gender">Select a valid gender</string>
    <string name="error_login">Wrong email or password</string>
    <string name="error_request">Error sending the request. Please try again later</string>
    <string name="error_loading_profile">There have been problems loading the profile</string>
    <string name="error_data_missing">Some data are missing</string>
    <string name="error_training_name">Please insert the name of the training</string>
    <string name="error_training_time">Please add the duration of the training</string>
    <string name="my_profile_drawer">My profile</string>
    <string name="my_coach_drawer">My coach</string>
    <string name="notifications_drawer">Notifications</string>
    <string name="progress_drawer">Progresses</string>
    <string name="settings_drawer">Settings</string>
    <string name="terms_drawer">Terms and Conditions</string>
    <string name="logout_drawer">LogOut</string>
    <string name="hi_user_string">Hi</string>
    <string name="recap_tab_title">WEEKLY SUMMARY:</string>
    <string name="training_tab_title">NEXT TRAINING</string>
    <string name="diet_tab_title">FOOD DIARY</string>
    <string name="full_name">Full name</string>
    <string name="edit_name">Edit your name</string>
    <string name="edit_gender">Edit your gender</string>
    <string name="edit_height">Edit your height</string>
    <string name="edit_objective">Edit your objective</string>
    <string name="client_current_weight">Your current weight: </string>
    <string name="btn_save_update">Update</string>
    <string name="edit_pfp">Edit your profile picture</string>
    <string name="confirm">Confirm</string>
    <string name="update_successful">Profile updated successfully!</string>
    <string name="image_changed_string">Image updated successfully!</string>
    <string name="nothing_to_update">There is nothing to update</string>
    <string name="add_meal">Add Meal</string>
    <string name="add_weight">Add Weight</string>
    <string name="add_training">Add Training</string>
    <string name="title_activity_settings">Settings</string>
    <string name="night_mode_on">Dark mode enabled</string>
    <string name="night_mode_off">Dark mode disabled</string>
    <string name="language">System language</string>
    <string name="dark_mode">Dark mode</string>
    <string name="language_summary">Choose the language of the system</string>
    <string name="feedback_tab_title">LAST FEEDBACK</string>
    <string name="text_label_clients">Clients</string>
    <string name="text_label_feedback">Feedbacks</string>
    <string name="failed_to_register">Failed to register a user</string>
    <string name="add_string">Add</string>
    <string name="select_training">Select Training</string>
    <string name="select_meal">Select Meal</string>
    <string name="back">Back</string>
    <string name="weight_successfully_added">Weight added successfully!</string>
    <string name="training_added">Training added successfully</string>
    <string name="hello_blank_fragment">ciao mondo</string>
    <string name="leave_feedback">Leave a feedback</string>
    <string name="change_coach">Unsubscribe</string>
    <string name="cancel">Cancel</string>
    <string name="leave_coach_title">Leave your coach</string>
    <string name="leave_coach_text">Are you sure you want to leave your coach?</string>
    <string name="competences">Competences</string>
    <string name="email_hint">Email:</string>
    <string name="add">Add</string>
    <string name="received_feedbacks">RECEIVED FEEDBACKS</string>
    <string name="feedback_number">Feedback number: </string>
    <string name="read_all">Read all</string>
    <string name="no_feedback_received">You have received no Feedbacks</string>
    <string name="no_feedback_received_parag">Ask your clients to give you a feedback!</string>
    <string name="request_subscribe">SUBSCRIBE</string>
    <string name="choose_a_coach">Choose a coach</string>
    <string name="client_requests">CLIENT REQUESTS</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="no_requests">There are no requests</string>
    <string name="request_sent">You have already sent a request to a coach</string>
    <string name="follower_request">Follower request</string>
    <plurals name="numberClientRequest">
        <item quantity="one">One client would like to be followed by you</item>
        <item quantity="other">%d clients would like to be followed by you</item>
    </plurals>
    <string name="zero_client_request">You do not have any client request yet</string>
    <string name="remove_request">Cancel request</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="remove_request_message">Are you sure to delete your request to the coach?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="request_successful_title">REQUEST SENT SUCCESSFULLY</string>
    <string name="request_sent_successuflly">Request sent successfully</string>
    <string name="request_deleted">Your request has been deleted</string>
    <string name="client_request">Client Request</string>
    <string name="objective">Objective: </string>
    <string name="kg">kg</string>
    <string name="current_weight">Current weight:</string>
    <string name="cm">cm</string>
    <string name="client_list">CLIENT LIST</string>
    <string name="no_clients">You have no clients</string>
    <string name="your_feedbacks">YOUR FEEDBACKS</string>
    <string name="initial_weight">Initial weight</string>
    <string name="training_schedule_caps">TRAINING SCHEDULE</string>
    <string name="diet_caps">DIET</string>
    <string name="no_training">No training plan avalaible</string>
    <string name="training_plan">Training plan</string>
    <string name="preference_languages">Choose the language of the application</string>
    <string name="default_language">Default (System setting)</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="unspecified">Not specified</string>
    <string name="title_activity_run">Map</string>
    <string name="new_training">New training</string>
    <string name="training_day">Day of the training: </string>
    <string name="duration">Time required: </string>
    <string name="add_exercise">Add an exercise</string>
    <string name="no_exercises">There are no exercises yet</string>
    <string name="esercise_description">Description:</string>
    <string name="exercise_name">Exercise name</string>
    <string name="time">Time</string>
    <string name="reps_number">Number of repetition</string>
    <string name="seconds">sec</string>
    <string name="seconds_number">Number of seconds</string>
    <string name="update_traning">Edit training info</string>
    <string name="training_name">Training name</string>
    <string name="training_time">Time (minutes)</string>
    <string name="send">Send</string>
    <string name="no_trainings_assigned">You have no trainings assigned</string>
    <string name="no_trainings_made">You haven\'t registered any training this week</string>
    <string name="completed_trainings">Trainings completed: </string>
    <string name="food_diary">Food diary</string>
    <string name="shopping_list">Shopping list</string>
    <string name="location_permission_denied">Location Permission Denied! Impossible to get current position.</string>
    <string name="starting_point">Starting Point</string>
    <string name="stop_point">Starting Point</string>
    <string name="notification_location_title">WeFit Run Tracker</string>
    <string name="notification_location_description">Run tracker active</string>
    <string name="run_stopped">Run concluded with success!</string>
    <string name="cancel_run">Are you sure to quit this run?</string>
    <string name="cancel_run_message">All the data of this run are gonna be loss.</string>
    <string name="gps_off">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="gps_off_toast">Impossible to track run without GPS enabled!</string>
    <string name="breakfast_caps">BREAKFAST</string>
    <string name="lunch_caps">LUNCH</string>
    <string name="dinner_caps">DINNER</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="no_meal_added">There is no meal added</string>
    <string name="add_meal_to">Add meal to:</string>
    <string name="quantity">Quantity</string>
    <string name="error_quantity">Please insert a valid quantity</string>
</resources>