<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    app:key="settings">

    <PreferenceCategory app:title="@string/dark_mode">

        <CheckBoxPreference
            app:key="my_dark_mode"
            app:title="@string/dark_mode"
            app:summaryOn="@string/night_mode_on"
            app:summaryOff="@string/night_mode_off" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/language">

        <ListPreference
            app:key="my_language"
            app:title="@string/language"
            app:dialogTitle="@string/preference_languages"
            app:entries="@array/settings_language_values"
            app:entryValues="@array/locales"
            app:defaultValue="@string/system_locale"
            app:summary="@string/language_summary" />

    </PreferenceCategory>

</PreferenceScreen>