<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.client.ClientRegistrationFragment"
    android:orientation="vertical">


    <TextView
        android:id="@+id/new_client_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_client"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="?attr/colorPrimary" />

    <EditText
        android:id="@+id/height_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_rounded_corners"
        android:hint="@string/height"
        android:layout_marginHorizontal="70dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="40dp"
        android:elevation="4dp"
        android:inputType="number"/>

    <EditText
        android:id="@+id/weight_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_rounded_corners"
        android:hint="@string/weight"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="70dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_marginBottom="10dp"
        android:elevation="4dp"
        android:inputType="numberDecimal"/>

    <View
        android:id="@+id/first_separation"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?attr/colorPrimary"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="25dp"
        android:elevation="2dp"/>

    <TextView
        android:id="@+id/choose_objective_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_objective"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginVertical="15dp"/>

    <RadioGroup
        android:id="@+id/radio_objective"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <RadioButton
            android:id="@+id/fit_objective_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fit_objective"/>

        <RadioButton
            android:id="@+id/shape_objective_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gain_mass_objective"/>

        <RadioButton
            android:id="@+id/lose_objective_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lose_weight_objective"/>


    </RadioGroup>

    <View
        android:id="@+id/second_separation"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?attr/colorPrimary"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="25dp"
        android:elevation="2dp"/>


</LinearLayout>