<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".client.fragment.ClientMyProfileFragment"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    style="@style/BackgroundCustom">

    <include layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/my_profile_drawer"
        style="@style/custom_h1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <androidx.cardview.widget.CardView
            android:layout_gravity="center"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="35dp"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="75dp"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/default_avatar"
                android:scaleType="centerCrop"/>

        </androidx.cardview.widget.CardView>


        <ImageView
            android:id="@+id/edit_pfp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/pencil_icon"
            android:layout_marginBottom="20dp"
            android:layout_gravity="bottom"
            android:backgroundTint="?attr/colorOnPrimary"
            android:contentDescription="@string/edit_pfp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/margin_horizontal"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_weight="1"
            android:id="@+id/profile_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            android:layout_gravity="start"
            android:inputType="text"
            style="@style/custom_p"/>

        <ImageView
            android:layout_gravity="center_vertical"
            android:id="@+id/profile_edit_name"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/pencil_icon"
            android:backgroundTint="?attr/colorOnPrimary"
            android:contentDescription="@string/edit_name"
            android:clickable="true"
            android:focusable="true"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_weight="1"
            android:id="@+id/profile_gender_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/gender"
            android:layout_gravity="start"
            android:inputType="text"
            style="@style/custom_p"/>

        <ImageView
            android:layout_gravity="center_vertical"
            android:id="@+id/edit_gender"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/pencil_icon"
            android:backgroundTint="?attr/colorOnPrimary"
            android:contentDescription="@string/edit_gender"
            android:clickable="true"
            android:focusable="true"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_weight="1"
            android:id="@+id/profile_height_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/height"
            android:layout_gravity="start"
            android:inputType="text"
            style="@style/custom_p"/>

        <ImageView
            android:layout_gravity="center_vertical"
            android:id="@+id/profile_edit_height"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/pencil_icon"
            android:backgroundTint="?attr/colorOnPrimary"
            android:contentDescription="@string/edit_height"
            android:clickable="true"
            android:focusable="true"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_weight="1"
            android:id="@+id/profile_objective_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/choose_objective"
            android:layout_gravity="start"
            android:inputType="text"
            style="@style/custom_p"/>

        <ImageView
            android:layout_gravity="center_vertical"
            android:id="@+id/edit_objective"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/pencil_icon"
            android:backgroundTint="?attr/colorOnPrimary"
            android:contentDescription="@string/edit_objective"
            android:clickable="true"
            android:focusable="true"/>

    </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Email: "
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:clickable="false"
            style="@style/custom_p"/>
        <TextView
            android:id="@+id/profile_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:clickable="false"
            style="@style/custom_p"
            android:layout_gravity="center_vertical"
            android:textSize="17dp"
            android:layout_marginLeft="2dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/client_current_weight"
            android:layout_marginStart="5dp"
            android:clickable="false"
            style="@style/custom_p"/>

        <TextView
            android:id="@+id/profile_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/weight"
            android:layout_marginStart="5dp"
            android:clickable="false"
            style="@style/custom_p"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kg"
            style="@style/custom_p"
            android:textSize="18dp" />

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save_profile_update"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/btn_save_update"
        style="@style/MaterialButtonCustom"
        android:paddingHorizontal="30dp"
        android:layout_gravity="center_horizontal"
        android:visibility="invisible"
        android:layout_marginBottom="10dp"
        android:textSize="15sp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>