<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/bottom_sheet_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/add_meal"
        android:layout_marginVertical="15dp"
        style="@style/custom_h2"
        android:clickable="true"
        android:focusable="true" />

    <include layout="@layout/spacer_layout"
        android:background="@color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/add_weight"
        android:layout_marginVertical="15dp"
        style="@style/custom_h2"
        android:clickable="true"/>

    <include layout="@layout/spacer_layout"
        android:background="@color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/add_training"
        android:layout_marginVertical="15dp"
        style="@style/custom_h2"
        android:clickable="true"/>


</LinearLayout>